style : Added footer style

--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
         <button id="calculate-btn">Calculate</button>
         <div id="output-text"></div>
     </div>
+    <footer>
+        <span><a href="https://github.com/SahilBhosale0808">Github</a></span>
+        <span><a href="https://www.linkedin.com/in/sahil-bhosale/">LinkedIn</a></span>
+    </footer>
     <script src="app.js"></script>
 </body>
 
